--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background-color: rgba(253, 4, 87, 0.918);
+  background-color: rgba(1, 34, 12, 0.918);
   width: 75%;
   padding: 10vh 0;
   margin: 0 auto;
@@ -14,11 +14,15 @@ body{
 }
 .header-cont{
   text-align: center;
+  margin: 3rem;
+}
+.logo{
+  width: 20%;
 }
 .main-h{
 text-transform: uppercase;
 font-size: 4rem;
-color: #150050;
+color: #0ffc07;
 }
 .description{
   font-weight: 200;
@@ -49,37 +53,74 @@ input, select{
 }
 button{
   padding: .7rem;
-  width: 25%;
-  margin: 0 auto;
+  width: 30%;
+  margin: 1rem auto;
+  display: block;
   border-radius: 10px;
-  color: #fff;
+  color: rgb(4, 34, 0);
   border: 0;
-  background-color: #150050;
+  background-color: #0ffc07;
   transition: all .3s ease-in-out;
+}
+.clear{
+  background-color: #01200e;
+  color: grey;
+}
+label{
+  color: yellow
 }
 button:hover{
   background-color: black;
   padding: .8rem;
-  width: 26%;
+  color: #fff;
+  width: 31%;
 }
 .submit{
   margin: 2rem 0;
   text-align: center;
 }
+.category{
+  font-style: italic;
+  text-align: center;
+  margin: 2rem .5rem;
+  font-size: 1rem;
+  color: #0ffc07;
 
+}
+.result{
+  margin: 2rem;
+  font-size: 1.2rem;
+  color: rgba(250, 250, 250, 0.575);
+}
+.result span{
+  display: block;
+  font-size: 2rem;
+  color: #0ffc07;;
+}
 @media (max-width:425px) {
-  
+
+    
 body{
   width: 95%;
+  padding: 4vh 0;
 }
 .header-cont{
   margin: 3rem 0;
+}
+.logo{
+  width: 40%;
 }
 .main-h{
 font-size: 2rem;
 }
 .description{
   font-size: 1rem;
+}
+button{
+  width: 50%;
+}
+button:hover{
+  width: 51%;
 }
 .form-flex{
   display: flex;
